--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -74,7 +74,7 @@ nav ul li a {
 
 .adventure {
     background-color: #cac7ee;
-    padding: 30px;
+    padding: 20px;
     text-align: center;
 }
 
@@ -95,8 +95,7 @@ nav ul li a {
 footer {
     background-color: steelblue;
     padding: 10px;
-    text-align: center;
-    position: fixed;
+    text-align: left;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -113,6 +112,6 @@ footer p {
 }
 
 .footer-icons img {
-    width: 20px;
+    width: 30px;
     margin-left: 10px;
 }
