--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,8 +15,7 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-
-.logo img {
+header img {
     width: 150px;
 }
 
@@ -34,13 +33,42 @@ nav ul li a {
     background-color: #212e3fc0;
     border-radius: 5px;
 }
-
+.hero {
+    position: relative;
+}
 .hero {
     text-align: center;
     background-color: #cac7ee;;
     padding: 20px;
 }
 
+.hero h1 {
+    position: absolute;
+    left: 0;
+    right: 0;
+    text-align: center;
+    top: 2rem;
+    color: white;
+}
+.hero article {
+    position: absolute;
+    top: 7rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 80%;
+    background-color: rgba(6, 78, 141, .5);
+    color: white;
+
+}
+.hero img {
+    width: 100%;
+    height: auto;
+}
+.hero article img {
+    width: 200px; 
+    float: right; 
+}
 .hero-content {
     display: flex;
     justify-content: space-around;
